--- a/public/locale/ru.json
+++ b/public/locale/ru.json
@@ -1,1 +1,122 @@
-{}
+{
+    "header": {
+        "japan": "Японский языковой учебный центр",
+        "we": "Почему мы",
+        "results": "Результаты",
+        "course": "Курсы",
+        "faq": "Часто задаваемые вопросы"
+    },
+    "hero": {
+        "title-sup": "Начните говорить на японском языке за 4 месяца",
+        "title": "Возможность обучения в университетах Японии с грантом до 100%",
+        "description-1": "Мы поможем вам достичь уровня N5 по японскому языку за 4 месяца",
+        "description-2": "Получите высокий уровень японского языка и возможность учиться и работать в Японии",
+        "button": "Записаться на бесплатный урок",
+        "button-sub": "Запишитесь на первый урок бесплатно"
+    },
+    "news": {
+        "title": "Новости"
+    },
+    "about": {
+        "title": "Nippon Study Center точно для вас, если вы:",
+        "text-1": "Хотите начать говорить на японском языке за короткий срок",
+        "text-2": "Хотите выучить японский язык и построить карьеру",
+        "text-3": "Хотите получить сертификат JLPT и выиграть грант в престижные университеты Японии",
+        "text-4": "Планируете уехать учиться и работать в Японии",
+        "text-5": "Знаете японский на среднем уровне и хотите повысить свой уровень",
+        "text-6": "Уже давно учите, но не можете добиться результата"
+    },
+    "results": {
+        "title-1": "Посмотрите результаты наших учеников",
+        "title-2": "Результаты наших учеников, получивших визу"
+    },
+    "jlpt": {
+        "title": "Возможность выиграть грант до 100% в университетах Японии",
+        "description": "JLPT (Тест на знание японского языка) — это международный стандартизированный экзамен для оценки уровня владения японским языком. Он включает в себя навыки чтения, аудирования, грамматики, словарный запас и кандзи (китайские иероглифы). Экзамен проводится в июле и декабре по всему миру. Сдача JLPT может быть важным требованием для работы или учебы в Японии."
+    },
+    "result-pupil": {
+        "title": "Наши результаты",
+        "description-1": "Наши ученики, получившие сертификаты",
+        "description-2": "Наши ученики, получившие визу",
+        "description-3": "Наши студенты, поступившие в университет"
+    },
+    "university": {
+        "title": "Мы помогаем нашим успешным выпускникам выбрать языковые школы и университеты, а также получить гранты",
+        "u-name-1": "Tokyo International University",
+        "u-name-2": "Japan University of Economics",
+        "u-name-3": "Ritsumeikan Asia Pacific University",
+        "u-name-4": "Waseda University",
+        "u-name-5": "Soka University",
+        "u-name-6": "Nagoya University",
+        "u-description-1": "Токийский Международный Университет (TIU) — это частный, исследовательский университет в области свободных искусств, основанный в 1965 году. Основной кампус находится в городе Тосима, Токио.",
+        "u-description-2": "Университет занимает 4-е место в Японии по количеству иностранных студентов. Более 80% студентов токийского кампуса — иностранцы.",
+        "u-description-3": "Это частный университет в Японии. APU был основан в 2000 году в сотрудничестве между префектурой Оита, городом Беппу и Ritsumeikan Trust.",
+        "u-description-4": "Частный исследовательский университет в Токио, район Синдзюку. Основан в 1882 году премьер-министром Японии Окума Сигэнобу как Токийская профессиональная школа и в 1902 году официально переименован в Университет Васэда.",
+        "u-description-5": "Сока университет Японии — это частный университет в Токио, основанный в 1971 году. В университете обучается около 8000 студентов, из которых 400 — иностранцы. Университет является частью программы Министерства образования, культуры, спорта, науки и технологий Японии \"Проект поддержки Супер Глобального университета\".",
+        "u-description-6": "Университет был основан в 1939 году как последний из девяти Императорских Университетов в Японской Империи и в настоящее время является Национальным университетом специального назначения.",
+        "s-name-1": "PROROW",
+        "s-name-2": "KURASHIKI LANGUAGE ACADEMY",
+        "s-name-3": "Hisae Japanese Language School",
+        "s-name-4": "TCC",
+        "s-name-5": "Hotsuma International School",
+        "s-name-6": "Osaka University of Tourism",
+        "s-name-7": "Tokyo Bay Japanese Language Academy",
+        "s-description-1": "ProRow Японская языковая школа, основанная в 2010 году, где тысячи студентов успешно выучили японский язык. Преимущества: индивидуальные программы, опытные преподаватели, культурные мероприятия, а также уроки в онлайн и традиционном формате.",
+        "s-description-2": "Kurashiki Language Academy основана в 2012 году и обучила сотни студентов японскому языку. Преимущества школы: индивидуальный учебный план, опытные преподаватели японского языка, культурные мероприятия для углубленного изучения языка. Доступны онлайн и традиционные формы обучения.",
+        "s-description-3": "Hisae Japanese Language School была основана в 2015 году и помогла многим студентам успешно выучить японский язык. Преимущества: адаптированные уроки, квалифицированные преподаватели, изучение японской культуры через культурные мероприятия, а также уроки в онлайн и офлайн формате.",
+        "s-description-4": "TCC основана в 2000 году и известна тем, что тысячи студентов успешно изучили японский язык. Преимущества: гибкие учебные программы, опытные преподаватели, практический опыт через культурные мероприятия и беседы. Доступны онлайн и традиционные формы обучения.",
+        "s-description-5": "Hotsuma International School была основана в 2010 году и известна тем, что многие студенты в совершенстве овладели японским языком. Преимущества: индивидуальный учебный план, опытные преподаватели, практическое обучение через культурные мероприятия, а также доступны онлайн и офлайн занятия.",
+        "s-description-6": "Osaka University of Tourism основан в 2002 году и предоставляет студентам возможность изучать японский язык и получать знания в сфере туризма. Преимущества: учебная программа ориентирована на туризм, опытные преподаватели, практические занятия и культурные мероприятия. Доступны онлайн и традиционные формы обучения.",
+        "s-description-7": "Tokyo Bay Japanese Language Academy была основана в 2013 году и привлекает множество студентов, желающих изучить японский язык. Преимущества: индивидуальный подход, квалифицированные преподаватели, практическое обучение через культурные мероприятия, а также доступны онлайн и офлайн варианты обучения."
+    },
+    "course": {
+        "title": "Запишитесь на подходящий для вас курс",
+        "card": {
+            "title-1": "Группа N5",
+            "title-2": "Группа N4",
+            "title-3": "Группа N3",
+            "title-4": "Специальная группа стажеров",
+            "description-1": "Изучение хираганы, катаканы, базовых слов и грамматических правил. После завершения сможете говорить на простом японском языке.",
+            "description-2": "Изучение японского языка на среднем уровне. Позволяет понимать и участвовать в повседневных разговорах.",
+            "description-3": "Изучение японского языка на продвинутом среднем уровне. Позволяет понимать сложные тексты, обсуждать различные темы и углубленно изучать грамматику.",
+            "description-4": "Изучение японского языка для профессионального общения и работы. Уделяется внимание пониманию сложных текстов и изучению необходимой терминологии для работы.",
+            "duration-1": "Продолжительность: 4 месяца",
+            "duration-2": "Продолжительность: 7 месяцев",
+            "duration-3": "Продолжительность: 10 месяцев",
+            "duration-4": "Продолжительность: 6 месяцев",
+            "button": "Записаться",
+            "price": "500 000 сум /месяц"
+        }
+    },
+    "academy": {
+        "title": "Почему именно Nippon Study Center?",
+        "name-1": "100% гарантия получения учебной визы",
+        "name-2": "Профессиональные преподаватели",
+        "name-3": "Активная деятельность с 2017 года",
+        "name-5": "Бесплатные пробные экзамены",
+        "description-1": "С нами вы получите возможность обучения своей мечты!",
+        "description-2": "Интерактивные и эффективные занятия с квалифицированными преподавателями японского языка.",
+        "description-3": "В центре проводятся занятия на основе интерактивных методов и индивидуального подхода, что гарантирует полное освоение тонкостей японского языка и культуры.",
+        "description-4": "От 0 до 100% (включая оформление документов, изучение японского с нуля, отправка в Японию, встреча в аэропорту, размещение и сопровождение до школ и университетов).",
+        "description-5": "Оцените свои знания японского языка бесплатно и выберите подходящий курс!",
+        "description-6": "Мы поможем успешно окончившим студентам получить визу для учебы в Японии, выбрать университет и выиграть грант."
+    },
+    "support": {
+        "title": "Остались вопросы?",
+        "description": "Оставьте свои данные, и мы свяжемся с вами, чтобы ответить на все ваши вопросы.",
+        "input-1": "Ваше имя",
+        "input-2": "Ваш номер телефона",
+        "button": "Задать вопрос"
+    },
+    "modal": {
+        "props": "Связаться",
+        "title": "Оставьте свои данные",
+        "description": "Наши специалисты свяжутся с вами, чтобы предоставить более подробную информацию.",
+        "input-1": "Ваше имя",
+        "input-2": "Ваш Telegram username (@test)",
+        "button": "Связаться"
+    },
+    "footer": "Политика конфиденциальности"
+
+
+}
