--- a/public/locale/ru.json
+++ b/public/locale/ru.json
@@ -31,7 +31,7 @@
         "title-2": "Результаты наших учеников, получивших визу"
     },
     "jlpt": {
-        "title": "Возможность выиграть грант до 100% в университетах Японии",
+        "title": "Возможность получить грант до 100% в языковые школы Японии.",
         "description": "JLPT (Тест на знание японского языка) — это международный стандартизированный экзамен для оценки уровня владения японским языком. Он включает в себя навыки чтения, аудирования, грамматики, словарный запас и кандзи (китайские иероглифы). Экзамен проводится в июле и декабре по всему миру. Сдача JLPT может быть важным требованием для работы или учебы в Японии."
     },
     "result-pupil": {
@@ -87,6 +87,11 @@
             "button": "Записаться",
             "price": "500 000 сум /месяц"
         }
+    },
+    "license": {
+        "title": "Лицензия",
+        "license-title": "Наш центр лицензирован в соответствии с законодательством Республики Узбекистан",
+        "license-description": "Наш Nippon Learning Center является частным учебным заведением, имеющим лицензию на проведение внеклассной образовательной деятельности и лицензию в соответствии с законодательством . Это означает, что вы можете доверять нам, и все законно"
     },
     "academy": {
         "title": "Почему именно Nippon Study Center?",
